{{$NEXT}}

0.09_5 2014-06-10
 - exception class UPSError now has methods to look inside the error data

0.09_4 2014-06-10
 - do not swallow non-HTTP exceptions

0.09_3 2014-06-09
 - failed Futures now have a 'ups' string as second element, as
   recommended by PEVANS
 - fixed Perl version specification

0.09_2 2014-06-05
 - correctly handle connection failures

0.09_1 2014-06-04
 - first release
 - all functionality (and most of the API) copied from Net::UPS 0.12
 - requires Perl 5.10
 - will work with IO::Async and Net::Async::HTTP, or with plain
   LWP::UserAgent