@@ -33,7 +33,7 @@ skip = ^LWP
 
 [Prereqs / RuntimeRequires]
 Task::Weaken = 0
-Net::Async::Webservice::Common = 0
+;Net::Async::Webservice::Common = 0
 
 [Prereqs / RuntimeRecommends]
 IO::Async::Loop = 0
