@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - migrate to Net::Async::Webservice::Common (not yet released, so
+   it's temporarily included in t/lib)
 
 0.09_5 2014-06-10
  - exception class UPSError now has methods to look inside the error data
